kustomize/onlyoffice/base/onlyoffice-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: onlyoffice-header
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: https
