kustomize/onlyoffice/base/onlyoffice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onlyoffice-docserver
spec:
  replicas: 1
  template:
    spec:
      containers:
      - env:
        - name: JWT_ENABLED
          value: "true"
        - name: JWT_SECRET
          valueFrom:
            secretKeyRef:
              key: jwt-secret
              name: onlyoffice-docserver
              optional: false
        image: onlyoffice/documentserver:9.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthcheck
            port: 80
            scheme: HTTP
          initialDelaySeconds: 120
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: docserver
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthcheck
            port: 80
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: 100m
            memory: 250Mi
      imagePullSecrets:
      - name: khalibre-docker-hub
      terminationGracePeriodSeconds: 30
