kustomize/onlyoffice/base/onlyoffice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: onlyoffice-docserver
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
